--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -26,8 +26,8 @@ source = ~/.config/hypr/binds.conf
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,2560x1600,auto,1.33
-
+monitor= eDP-1 ,2560x1600,auto,1.33
+monitor = , preferred, auto, 1, mirror, eDP-1
 # unscale XWayland
 xwayland {
 	force_zero_scaling = true
@@ -139,7 +139,7 @@ decoration {
 }
 
 windowrulev2 = opacity 1.0 override 0.6 override, class:zen
-windowrule = opacity 1.0 override 1.0 override,^(spotify)$
+windowrulev2 = opacity 1.0 override 0.6 override, class:spotify
 windowrulev2 = size 800 600, class:zen-browser,title:Save Image
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
@@ -193,7 +193,7 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
 }
 
@@ -208,7 +208,6 @@ device {
     name = epic-mouse-v1
     sensitivity = -0.5
 }
-
 
 
 ##############################
