change spotify opacity fixed

--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -139,7 +139,7 @@ decoration {
 }
 
 windowrulev2 = opacity 1.0 override 0.6 override, class:zen
-windowrulev2 = opacity 1.0 override 0.6 override, class:spotify
+windowrulev2 = opacity 0.90 override 0.90 override, title:^(Spotify)$
 windowrulev2 = size 800 600, class:zen-browser,title:Save Image
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
