--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -20,6 +20,8 @@ env = QT_QPA_PLATFORM,wayland
 env = QT_QPA_PLATFORM, xcb stremio
 
 source = ~/.config/hypr/binds.conf
+source = ~/.cache/wal/colors-hyprland.conf
+# source = ~/.cache/wal/colors-kitty.conf
 
 ################
 ### MONITORS ###
@@ -80,13 +82,15 @@ env = QT_QPA_PLATFORMTHEME.qt6ct
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
-    gaps_in = 3
-    gaps_out = 4
+    gaps_in = 3.5
+    gaps_out = 6
 
-    border_size = 2
+    border_size = 3
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = $color7 rgba(59595900) $color15 45deg
+    col.inactive_border = rgba(59595900)
+    #col.active_border = $color1
     #col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -103,18 +107,18 @@ general {
 decoration {
     rounding = 10
 
-    active_opacity = 0.7
+    active_opacity = 0.9
     inactive_opacity = 0.6
+    fullscreen_opacity = 1.0
 
     blur {
         enabled = true
         size = 10
-        passes = 1
+        passes = 2
         new_optimizations = true
         ignore_opacity = true
-        noise = 0
-        brightness = 0.60
-	xray = true
+	noise = 0
+	brightness = 0.60
     }
 
   
@@ -139,7 +143,7 @@ decoration {
 }
 
 windowrulev2 = opacity 1.0 override 0.6 override, class:zen
-windowrulev2 = opacity 0.90 override 0.90 override, title:^(Spotify)$
+windowrulev2 = opacity 1.0 override 1.0 override, title:^(Spotify)$
 windowrulev2 = size 800 600, class:zen-browser,title:Save Image
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
