made wallpaper switcher script

--- a/private_dot_config/hypr/hyprpaper.conf
+++ b/private_dot_config/hypr/hyprpaper.conf
@@ -1,9 +1,9 @@
-preload = ~/Pictures/wallpapers/upaqua.png
+preload = /home/dream/Pictures/wallpapers/upaqua.png
 
 # .. more preloads
 
 #set the default wallpaper(s) seen on initial workspace(s) --depending on the number of monitors used
-wallpaper = eDP-1, ~/Pictures/wallpapers/upaqua.png
+wallpaper = eDP-1, /home/dream/Pictures/wallpapers/upaqua.png
 #if more than one monitor in use, can load a 2nd image
 
 # .. more monitors
@@ -13,4 +13,3 @@ splash = false
 
 #fully disable ipc
 # ipc = off
-
