--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -11,9 +11,6 @@ source = ~/.cache/wal/colors-hyprland.conf
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor= eDP-1 ,2560x1600,auto,1.33
 monitor = , preferred, auto, 1, mirror, eDP-1
-
-
-
 # unscale XWayland
 xwayland {
 	force_zero_scaling = true
@@ -177,5 +174,18 @@ device {
     sensitivity = -0.5
 }
 
+
+##############################
+### WINDOWS AND WORKSPACES ###
+##############################
+
+# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
+
+# Example windowrule v1
+# windowrule = float, ^(kitty)$
+
+# Example windowrule v2
+# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
