--- a/private_dot_config/hypr/binds.conf
+++ b/private_dot_config/hypr/binds.conf
@@ -4,7 +4,7 @@
 
 $terminal = kitty
 $fileManager = nemo
-$menu = fuzzel
+$menu = rofi -show drun
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
