--- a/private_dot_config/hypr/binds.conf
+++ b/private_dot_config/hypr/binds.conf
@@ -4,7 +4,11 @@
 
 $terminal = kitty
 $fileManager = nemo
-$menu = rofi -show drun
+
+$CONFIG=~/.config/hypr/wofi/config/config
+$STYLE=~/.config/hypr/wofi/src/mocha/style.css
+
+$menu = wofi --show drun --conf $CONFIG --style $STYLE --allow-images
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
