--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -9,7 +9,7 @@ source = ~/.cache/wal/colors-hyprland.conf
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor= eDP-1 ,2560x1600,auto,1.33
+monitor= eDP-1 ,2560x1600@165,auto,1.33
 monitor = , preferred, auto, 1, mirror, eDP-1
 # unscale XWayland
 xwayland {
