change rainbow style pipes-rs

--- a/private_dot_config/pipes-rs/config.toml
+++ b/private_dot_config/pipes-rs/config.toml
@@ -1,10 +1,10 @@
 bold = false
-color_mode = "ansi" # ansi, rgb or none
+color_mode = "rgb" # ansi, rgb or none
 palette = "pastel" # default, darker, pastel or matrix
 rainbow = 69 # 0-255
 delay_ms = 20
 inherit_style = false
 kinds = ["blocks", "heavy"] # heavy, light, curved, knobby, emoji, outline, dots, blocks, sus
 num_pipes = 3
-reset_threshold = 0.8 # 0.0–1.0
+reset_threshold = 0.5 # 0.0–1.0
 turn_chance = 0.15 # 0.0–1.0
