--- a/private_dot_config/hypr/binds.conf
+++ b/private_dot_config/hypr/binds.conf
@@ -28,6 +28,7 @@ bind = $mainMod SHIFT, left, resizeactive, -100 0 # Reduce window width with key
 bind = $mainMod SHIFT, down, resizeactive, 0 100 # Increase window height with keyboard
 bind = $mainMod SHIFT, up, resizeactive, 0 -100 # Reduce window height with keyboard
 bind = $mainMod SHIFT, B, exec, bash ~/dotfiles/waybar/launch.sh # Reload waybar
+bind = $mainMod, L, exec, killall waybar || waybar
 bind = $mainMod, T, fullscreen, 1
 bind = $mainMod, F11, fullscreen, 0
 
