make hyprland blur tweaks

--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -98,8 +98,9 @@ decoration {
         passes = 2
         new_optimizations = true
         ignore_opacity = true
-	noise = 0
-	brightness = 0.60
+	noise = 0.08
+	vibrancy_darkness = 0.1
+	brightness = 0.50
     }
 }
 
