added togglesplit hyprland

--- a/private_dot_config/hypr/binds.conf
+++ b/private_dot_config/hypr/binds.conf
@@ -31,6 +31,7 @@ bind = $mainMod SHIFT, B, exec, bash ~/dotfiles/waybar/launch.sh # Reload waybar
 bind = $mainMod, L, exec, killall waybar || waybar
 bind = $mainMod, T, fullscreen, 1
 bind = $mainMod, F11, fullscreen, 0
+bind = $mainMod, Space, togglesplit
 
 bind = $mainMod, PrtSc, exec, hyprshot -m output
 
