--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -105,6 +105,7 @@ decoration {
 }
 
 windowrulev2 = opacity 1.0 override 0.6 override, class:zen
+windowrulev2 = opacity 0.9 override 0.85 override, class:webstorm
 windowrulev2 = opacity 1.0 override 1.0 override, title:^(Spotify)$
 windowrulev2 = opacity 1.0 override 0.6 override, class:vesktop
 windowrulev2 = size 800 600, class:zen-browser,title:Save Image
