runs zen on nvidia gpu

--- a/private_dot_config/hypr/binds.conf
+++ b/private_dot_config/hypr/binds.conf
@@ -22,7 +22,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, F, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, B, exec, zen-browser
+bind = $mainMod, B, exec, prime-run zen-browser
 bind = $mainMod SHIFT, right, resizeactive, 100 0 # Increase window width with keyboard
 bind = $mainMod SHIFT, left, resizeactive, -100 0 # Reduce window width with keyboard
 bind = $mainMod SHIFT, down, resizeactive, 0 100 # Increase window height with keyboard
